<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_resignation"><![CDATA[Login & Resignation]]></string>
    <string name="next">Next</string>
    <string name="About">you will see the blank Screen</string>
    <string name="Add">Press + to add your favourite Shoes </string>
    <string name="add">add</string>
    <string name="ListOfItems">Items</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="AddButton">Add</string>
    <string name="shoe_size">Shoe size</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="welcome">Welcome !</string>
    <string name="about">welcome to shoe app, press Go to see the Instruction</string>
    <string name="go_button">GO</string>
    <string name="Scroll_Name">Scroll</string>


</resources>
