<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewShoeDetails">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="106dp"
            android:layout_height="37dp"
            android:text="@string/shoe_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/ShoeNameText"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.783" />

        <EditText
            android:id="@+id/ShoeNameText"
            android:layout_width="211dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.192"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:text="@={viewModel.newShoeName}"/>

        <EditText
            android:id="@+id/ShoeCompanyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.741"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:text="@={viewModel.newCompanyName}"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="98dp"
            android:layout_height="37dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="40dp"
            android:text="@string/shoe_company"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.961" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="94dp"
            android:layout_height="36dp"
            android:layout_marginBottom="40dp"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/ShoeSizeText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ShoeSizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_size"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.746"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.436"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:text="@={viewModel.newShoeSize}"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="132dp"
            android:layout_height="62dp"
            android:layout_marginBottom="20dp"
            android:text="@string/description"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/DescriptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/DescriptionText"
            android:layout_width="241dp"
            android:layout_height="89dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.798"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:text="@={viewModel.newShoeDescription}"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="611dp" />

        <Button
            android:id="@+id/AddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/AddButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/AddButton"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>